CSS: Fix responsivité + ajout upvote & socials sur modal (WIP)

--- a/app/Resources/views/main/observation.html.twig
+++ b/app/Resources/views/main/observation.html.twig
@@ -122,7 +122,7 @@
 
                     {#AFFICHAGE DES OISEAUX TROUVÉS PAR LE FILTRE#}
                     {#Voir observation.css#}
-                    <div class="flex-wrap flex-column comm-display bird-observation-display p-0" id="aidez-moi">
+                    <div class="flex-wrap flex-column comm-display bird-observation-display px-2" id="aidez-moi">
                         {#<div class="d-flex flex-nowrap align-items-center comm m-3">
                             <img src="" alt="" class="searching_bird rounded-circle">
                             <div class="col-12 pl-3">
