--- a/app/Resources/views/main/profile.html.twig
+++ b/app/Resources/views/main/profile.html.twig
@@ -158,7 +158,7 @@
                                                 a {{ userObservation.updateAt | ago }}</span>
                                         </div>
                                         <div class="d-flex flex-column align-self-start">
-                                        	<h3 class="align-self-end text-left">étourneau améthyste</h3>
+                                        	<h3 class="align-self-start text-left">étourneau améthyste</h3>
                                         	<p class="align-self-start m-0">{{ userObservation.user.username | capitalize }}</p>
                                         </div>
                                         <div class="align-self-end">
@@ -338,14 +338,14 @@
                         {#----MODALE---#}
                         {#-OBSERVATION-#}
                         {#-------------#}
-                        <div id="waitingObservationModal_{{ loop.index }}" class="modal fade mt-4"
+                        <div id="waitingObservationModal_{{ loop.index }}" class="modal fade"
                              role="dialog">
                                 <div class="close-wrap d-flex mx-auto align-items-center justify-content-center">
                                     <button type="button" class="close-button text-center mb-1" data-dismiss="modal">
                                         &times;
                                     </button>
                                 </div>
-                            <div class="modal-dialog bird-modal">
+                            <div class="modal-dialog bird-modal mx-auto">
                                 <!-- Modal content-->
                                 <div class="modal-content">
                                     <div class="heading mt-5">
@@ -354,7 +354,7 @@
                                     </div>
 
                                     <div class="modal-body py-0 mb-5">
-                                        <div class="flex-wrap media align-items-center justify-content-center">
+                                        <div class="flex-wrap media align-items-center justify-content-center px-0 px-md-3">
                                             <img class="col-12 col-md-4 rounded mr-md-4 p-0" src="{{ waitingObservation.bird.image }}" alt="image {{ waitingObservation.bird.name }}">
                                             <div class="media-body col-12 col-md-8 p-0">
                                                 <h3 class="mt-5 mt-md-0 text-center text-md-left">DESCRIPTION</h3>
@@ -364,7 +364,7 @@
                                     </div>
 
                                     <div class="modal-footer pt-5 text-center">
-                                        <div class="text-center col-12">
+                                        <div class="text-center col-12 px-0 px-md-3">
                                             <h3>OBSERVATION</h3>
                                             <div class="col-12">
                                                 <div class="row align-items-center justify-content-start my-5">
@@ -379,7 +379,20 @@
                                             <div class="row">
                                                 <div class="col-12 col-lg-6">
                                                     <div class="d-flex flex-wrap align-items-center justify-content-between">
-                                                        <img class="col-12 rounded p-0 mb-5" src="{{ waitingObservation.bird.image }}" alt="image {{ waitingObservation.bird.name }}">
+                                                        <div class="col-12 rounded p-0 mb-5">
+                                                            <span class="fa-stack fa fa-2x">
+                                                                <i class="fa fa-heart fa-stack-2x" aria-hidden="true"></i>
+                                                                <strong class="fa fa-stack heart-text">{{ waitingObservation.vote }}</strong>
+                                                            </span>
+                                                            <img class="col-12 rounded p-0 mb-5" src="{{ waitingObservation.bird.image }}" alt="image {{ waitingObservation.bird.name }}">
+                                                            <span class="social-modal">
+                                                                <i class="fa fa-facebook fa-3x" aria-hidden="true"></i>
+
+                                                                <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
+
+                                                                <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
+                                                            </span>
+                                                        </div>
                                                         <div class="col-12 col-xl-6 p-0 pr-xl-3">
                                                             <div class="form-group p-0">
                                                                 <input type="text" id="family" name="family" required="required" placeholder="Famille" class="form-control" />
@@ -415,7 +428,7 @@
                                                         {# {% for comment in comments %} #}
                                                             <div class="d-flex flex-nowrap align-items-center comm m-3">
                                                                 <img src="{# {{ asset('img/'~comment.user.profilePicture) }} #}" alt="" class="comment-avatar rounded-circle">
-                                                                <div class="col-12 pl-3">
+                                                                <div class="col-12 pl-3 text-left">
                                                                     <div class="col-12 px-0">
                                                                         <p class="mb-1 font-weight-bold">{# {{ comment.user.username|capitalize }} #}</p>
                                                                     </div>
