--- a/app/Resources/views/main/oiseaux.html.twig
+++ b/app/Resources/views/main/oiseaux.html.twig
@@ -140,7 +140,11 @@
                                                             {% if observation.image == null %}
                                                                 <img class="col-12 rounded p-0 mb-5" src="{{ asset('img/anonymeBird.png') }}" alt="image {{ observation.bird.name }}">
                                                             {% else %}
-                                                                <img class="col-12 rounded p-0 mb-5" src="{{ asset(observation.image) }}" alt="image {{ observation.bird.name }}">
+                                                                <img class="col-12 rounded p-0 mb-5" src="{{ asset(observation.image) }}" alt="image {{ observation.bird.name }}"> <span class="fa-stack fa fa-2x mr-3">
+                                                                {#VOTE#}
+                                                                <i class="fa fa-heart fa-stack-2x voteJs" id="voteFor{{ observation.id }}" aria-hidden="true" data-observationId="{{ observation.id }}" data-userId="{{ user.id }}" ></i>
+                                                                <strong class="fa fa-stack heart-text voteJs" data-observationId="{{ observation.id }}" data-userId="{{ user.id }}">{{ observation.usersVoted|length }}</strong>
+                                                            </span>
                                                             {% endif %}
                                                         </div>
                                                     </div>
