--- a/app/Resources/views/form/commentFormObservation.html.twig
+++ b/app/Resources/views/form/commentFormObservation.html.twig
@@ -1,7 +1,7 @@
 <div class="form_error"></div>
-<form name="appbundle_comment" method="POST" id="commentForm" class="d-flex flex-row justify-content-between" data-url="{{ path('addComment', {'id' : observation.id} ) }}">
+<form name="appbundle_comment" method="POST" id="commentFormObservation{{ observation.id }}" class="d-flex flex-row justify-content-between commentFormObservation_JS" data-url="#" data-observationId="{{ observation.id }}">
     <div class="input-group align-items-center">
-        <input type="text" id="content" name="content" required="required" placeholder="Ajouter un commentaire..." class="form-control" />
+        <input type="text" id="contentObservation{{ observation.id }}" name="content" required="required" placeholder="Ajouter un commentaire..." class="form-control" />
         <button role="submit" class="input-group-addon text-center" href="#"><span class="fa fa-paper-plane input-group-icon"></span></button>
     </div>
 </form>
