--- a/app/Resources/views/main/oiseaux.html.twig
+++ b/app/Resources/views/main/oiseaux.html.twig
@@ -160,7 +160,7 @@
                                                         </div>
 
                                                         {# AFFICHAGE COMMENTAIRES #}
-                                                        <div class="flex-wrap flex-column comm-display p-0 mb-4">
+                                                        <div class="flex-wrap flex-column comm-display p-0 mb-4" id="Js-observationCommentsDisplay{{ observation.id }}">
                                                             {% for comment in observation.comments %}
                                                                 <div class="d-flex flex-nowrap align-items-center comm m-3">
                                                                     <img src="{{ asset('img/'~comment.user.profilePicture) }}" alt="" class="comment-avatar rounded-circle">
@@ -207,6 +207,7 @@
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRCQ8TMWxrWoGPHoZX6556wOwkB4T-6wM&callback=initMap">
     </script>
+    <script src="{{ asset('js/jquery-dateFormat.min.js') }}"></script>
     <script src="{{ asset('js/oiseaux.js') }}"></script>
 {% endblock %}
 
