OIseaux terminé, observation manque la photo

--- a/app/Resources/views/main/observation.html.twig
+++ b/app/Resources/views/main/observation.html.twig
@@ -163,7 +163,7 @@
     <script src="{{ asset('js/jquery.ui.dialog-clickoutside.js') }}"></script>
     <script src="{{ asset('js/observation.js') }}"></script>
     <script src="{{ asset('js/datepicker.js') }}"></script>
-    <script src="{{ asset('js/filter.js') }}"></script>
+    <script src="{{ asset('js/filterObservation.js') }}"></script>
 
 {% endblock %}
 
