--- a/app/Resources/views/main/profile.html.twig
+++ b/app/Resources/views/main/profile.html.twig
@@ -357,7 +357,7 @@
                                 <div class="modal-content">
                                     <div class="heading mt-5">
                                         <h2>{{ waitingObservation.bird.name }}</h2>
-                                        <span>{{ waitingObservation.bird.name }}</span>
+                                        <span>{{ waitingObservation.bird.taxref.nomScientifique }}</span>
                                     </div>
 
                                     <div class="modal-body py-0 mb-5">
@@ -379,7 +379,6 @@
                                                     <div class="justify-content-start ml-3">
                                                         <p class="text-left mb-1 user-name">{{ waitingObservation.user.username|capitalize }}</p>
                                                         <span class="text-left time">{{ waitingObservation.updateAt|ago }}</span>
-
                                                     </div>
                                                 </div>
                                             </div>
@@ -388,10 +387,10 @@
                                                     <div class="d-flex flex-wrap align-items-center justify-content-between">
                                                         <div class="col-12 rounded p-0 mb-5">
                                                             <span class="fa-stack fa fa-2x">
-                                                                <i class="fa fa-heart fa-stack-2x" aria-hidden="true"></i>
-                                                                <strong class="fa fa-stack heart-text">{{ waitingObservation.usersVoted|length }}</strong>
+                                                                <i class="fa fa-heart fa-stack-2x voteJs" id="voteFor{{ waitingObservation.id }}" aria-hidden="true" data-observationId="{{ waitingObservation.id }}" data-userId="{{ user.id }}"></i>
+                                                                <strong class="fa fa-stack heart-text voteJs heartJs" data-observationId="{{ waitingObservation.id }}" data-userId="{{ user.id }}">{{ waitingObservation.usersVoted|length }}</strong>
                                                             </span>
-                                                            <img class="col-12 rounded p-0 mb-5" src="{{ waitingObservation.bird.image }}" alt="image {{ waitingObservation.bird.name }}">
+                                                            <img class="col-12 rounded p-0 mb-5" src="{{ waitingObservation.image }}" alt="image {{ waitingObservation.bird.name }}">
                                                             <span class="social-modal">
                                                                 <i class="fa fa-facebook fa-3x" aria-hidden="true"></i>
 
@@ -401,11 +400,11 @@
                                                             </span>
                                                         </div>
                                                         <div class="col-12 col-xl-6 p-0 pr-xl-3">
-                                                            <div class="form-group p-0">
-                                                                <input type="text" name="family" required="required" placeholder="Famille" class="form-control" />
-                                                            </div>
+                                                            {{ form_start(formTaxref) }}
+                                                            {{ form_row(formTaxref.nomScientifique) }}
+                                                            {{ form_end(formTaxref) }}
                                                         </div>
-                                                        <div class="col-12 col-xl-6 p-0">
+                                                        {#<div class="col-12 col-xl-6 p-0">
                                                             <div class="form-group p-0">
                                                                 <input type="text" name="order" required="required" placeholder="Ordre" class="form-control" />
                                                             </div>
@@ -414,52 +413,45 @@
                                                             <div class="form-group p-0">
                                                                 <input type="text" name="birdname" required="required" placeholder="Nom de l'éspèce" class="form-control" />
                                                             </div>
-                                                        </div>
-                                                        <div class="col-12 col-xl-6 p-0">
+                                                        </div>#}
+                                                        {#<div class="col-12 col-xl-6 p-0">
                                                             <div class="form-group p-0">
                                                                 <input type="text" name="birdnumber" required="required" placeholder="Nombre d'oiseaux" class="form-control" />
                                                             </div>
-                                                        </div>
+                                                        </div>#}
                                                     </div>
                                                 </div>
                                                 <div class="col-12 col-lg-6">
                                                     {# Google Map #}
                                                     <div class="col-12 rounded p-0 mb-5">
-                                                        <div class="rounded" style="height: 350px; background-color: #999999"></div>
+                                                        <div class="rounded" style="height: 350px; background-color: #999999" id="mapObservation{{ waitingObservation.id }}"></div>
                                                     </div>
 
 
 
                                                     {# AFFICHAGE COMMENTAIRES #}
-                                                    <div class="flex-wrap flex-column comm-display p-0 mb-4">
-                                                        {# {% for comment in comments %} #}
+                                                    <div class="flex-wrap flex-column comm-display p-0 mb-4" id="Js-observationCommentsDisplay{{ waitingObservation.id }}">
+                                                        {% for comment in waitingObservation.comments %}
                                                             <div class="d-flex flex-nowrap align-items-center comm m-3">
-                                                                <img src="{# {{ asset('img/'~comment.user.profilePicture) }} #}" alt="" class="comment-avatar rounded-circle">
+                                                                <img src="{{ asset('img/'~comment.user.profilePicture) }}" alt="" class="comment-avatar rounded-circle">
                                                                 <div class="col-12 pl-3 text-left">
                                                                     <div class="col-12 px-0">
-                                                                        <p class="mb-1 font-weight-bold">{# {{ comment.user.username|capitalize }} #}</p>
+                                                                        <p class="mb-1 font-weight-bold">{{ comment.user.username|capitalize }}</p>
                                                                     </div>
                                                                     <div class="col-12 px-0">
-                                                                        <p class="mb-0 text-left">{# {{ comment.content|capitalize }} #}</p>
+                                                                        <p class="mb-0 text-left">{{ comment.content|capitalize }}</p>
                                                                     </div>
                                                                     <div class="col-12 px-0">
-                                                                        <span class="time">{# {{ comment.updateAt|ago }} #}</span>
-                                                                    </div>  
+                                                                        <span class="time">{{ comment.updateAt|ago }}</span>
+                                                                    </div>
                                                                 </div>
                                                             </div>
-                                                        {# {% endfor %} #}
+                                                        {% endfor %}
                                                     </div>
 
                                                     {# AJOUT COMMENTAIRE #}
-                                                    <div class="col-12 px-0" id="addCommentObservation{{ waitingObservation.id }}" >
-                                                        <div class="form_error"></div>
-                                                        <form name="appbundle_comment" method="POST" id="commentFormObservation{{ waitingObservation.id }}" class="d-flex flex-row justify-content-between" data-url="{# {{ path('addComment', {'id' : actualite.id} ) }} #}">
-                                                            <div class="input-group align-items-center">
-                                                                <input type="text" id="commentContentObservation{{ waitingObservation.id }}" name="content" required="required" placeholder="Ajouter un commentaire..." class="form-control" />
-                                                                <button role="submit" class="input-group-addon text-center" href="#"><span class="fa fa-paper-plane input-group-icon"></span></button>
-                                                            </div>
-                                                        </form>
-
+                                                    <div class="col-12 px-0" id="addComment" >
+                                                        {% include 'form/commentFormWaitingObservation.html.twig' %}
                                                     </div>
                                                 </div>
                                             </div>
