CSS: Fix Gmap font issue + labels tweaks + fix responsivité

--- a/app/Resources/views/form/commentForm.html.twig
+++ b/app/Resources/views/form/commentForm.html.twig
@@ -1,6 +1,6 @@
 <div class="form_error"></div>
 <form name="appbundle_comment" method="POST" id="commentForm" class="d-flex flex-row justify-content-between" data-url="{{ path('addComment', {'id' : actualite.id} ) }}">
-    <div class="form-group align-items-center">
+    <div class="mb-0 form-group align-items-center">
     	<label class="control-label" for="content">Ajouter un commentaire</label>
 	    <input type="text" id="content" name="content" required="required" placeholder="Ajouter un commentaire" class="form-control" />
 	    <button role="submit" class="input-group-addon text-center" href="#"><span class="fa fa-paper-plane input-group-icon"></span></button>
