--- a/app/Resources/views/form/commentFormWaitingObservation.html.twig
+++ b/app/Resources/views/form/commentFormWaitingObservation.html.twig
@@ -1,6 +1,6 @@
 <div class="form_error"></div>
 <form name="appbundle_comment" method="POST" id="commentFormObservation{{ waitingObservation.id }}" class="d-flex flex-row justify-content-between commentFormObservation_JS" data-url="#" data-observationId="{{ waitingObservation.id }}">
-    <div class="input-group align-items-center">
+    <div class="mb-0 input-group align-items-center">
         <input type="text" id="contentObservation{{ waitingObservation.id }}" name="content" required="required" placeholder="Ajouter un commentaire..." class="form-control" />
         <button role="submit" class="input-group-addon text-center" href="#"><span class="fa fa-paper-plane input-group-icon"></span></button>
     </div>
