--- a/app/Resources/views/main/oiseaux.html.twig
+++ b/app/Resources/views/main/oiseaux.html.twig
@@ -37,28 +37,53 @@
                 <span>Trouvez vite les oiseaux proches de vous et apprenez à les connaître!</span>
             </div>
 
-            <div class="row justify-content-xl-center mb-5 col-12 col-sm-10 col-lg-12 col-xxl-10 mx-auto px-0 mb-4">
+            <div class="row justify-content-xl-center col-12 col-sm-10 col-lg-12 col-xxl-10 mx-auto px-0 mb-0">
                 {# <div class="col-12 col-sm-6 col-md-4">
                     <input type="search"><i class="fa fa-search form-control" aria-hidden="true"></i>
                 </div> #}
                 <div class="col-12 col-lg-4 mb-3">
-                    <div class=" input-group align-items-center ">
-                        <input type="text" class="form-control" id="searchUser" placeholder="Rechercher un utilisateur">
-                        <a class="input-group-addon text-center" href="#searhUser"><i class="fa fa-search input-group-icon"></i></a>
+                    <div class="input-group align-items-center ">
+                        <label class="control-label" for="searchBird">Rechercher un oiseau</label>
+                        <input type="text" class="form-control" id="searchBird" placeholder="Rechercher un oiseau">
+                        <a class="input-group-addon text-center" href="#searhBird"><i class="fa fa-search input-group-icon"></i></a>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-2">
                     {{ form_start(formBirdFilter) }}
-                    {{ form_row(formBirdFilter.plumage) }}
+                    {{ form_row(formBirdFilter.plumage, {
+                        'label' : 'Plumage',
+                        'attr' : {
+                            'placeholder' : 'Plumage',
+                            'class': 'form-control'
+                        }
+                    }) }}
                 </div>
                 <div class="col-12 col-md-6 col-lg-2">
-                    {{ form_row(formBirdFilter.formeBec) }}
+                    {{ form_row(formBirdFilter.formeBec, {
+                        'label' : 'Forme du bec',
+                        'attr' : {
+                            'placeholder' : 'Forme du bec',
+                            'class': 'form-control'
+                        }
+                    }) }}
                 </div>
                 <div class="col-12 col-md-6 col-lg-2">
-                    {{ form_row(formBirdFilter.pattes) }}
+                    {{ form_row(formBirdFilter.pattes, {
+                        'label' : 'Pattes',
+                        'attr' : {
+                            'placeholder' : 'Pattes',
+                            'class': 'form-control'
+                        }
+                    }) }}
                 </div>
                 <div class="col-12 col-md-6 col-lg-2">
-                    {{ form_row(formBirdFilter.couleurBec) }}
+                    {{ form_row(formBirdFilter.couleurBec, {
+                        'label' : 'Couleur du bec',
+                        'attr' : {
+                            'placeholder' : 'Couleur du bec',
+                            'class': 'form-control'
+                        }
+                    }) }}
                     {{ form_end(formBirdFilter) }}
                 </div>
             </div>
