--- a/web/css/base.css
+++ b/web/css/base.css
@@ -32,7 +32,7 @@
 /* latin-ext */
 
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'Roboto' !important;
     font-style: normal;
     src: url(https://fonts.gstatic.com/s/roboto/v18/Fcx7Wwv8OzT71A3E1XOAjvesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
     unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
