--- a/web/css/base.css
+++ b/web/css/base.css
@@ -702,60 +702,6 @@ label {
     padding: 0 0 0 4px;
     font-family: var(--roboto) !important;
 }
-.modal span.fa-stack {
-    position: absolute;
-    z-index: 1000;
-    font-size: 24px;
-    right: 12px;
-    top: 6px;
-    background: rgba(255, 254, 249, 0.5);
-    border-radius: 50px;
-    height: 60px;
-    width: 60px;
-    padding: 8px;
-}
-
-.fa-stack:hover {
-    
-    animation-name: pulse;
-    -webkit-animation-name: pulse;  
-    animation-duration: 1.5s;   
-    -webkit-animation-duration: 1.5s;
-    animation-iteration-count: infinite;
-    -webkit-animation-iteration-count: infinite;
-}
-
-.modal .heart-text {
-    margin-top: 0;
-    font-family: var(--roboto);
-    font-weight: 400;
-    font-size: 18px !important;
-    margin: auto;
-    color: var(--pampas);
-    text-align: center;
-    font-family: var(--roboto) !important;
-}
-
-.social-modal {
-    position: absolute;
-    bottom: 12px;
-}
-
-.social-modal i{
-    color: var(--purple);
-}
-
-@media (min-width: 1400px) {
-    .col-xxl-5 {
-        flex: 0 0 38.6667% !important;
-        max-width: 38.6667% !important;
-    }
-    .col-xxl-10 {
-        flex: 0 0 77.3334% !important;
-        max-width: 77.3334% !important;
-    }
-}
-
 
 /* Spé pour les écrans très petits */
 
@@ -795,7 +741,73 @@ label {
         line-height: 18px;
     }
 }
+.modal span.fa-stack {
+    position: absolute;
+    z-index: 1000;
+    font-size: 24px;
+    right: 12px;
+    top: 6px;
+    background: rgba(255, 254, 249, 0.5);
+    border-radius: 50px;
+    height: 40px;
+    width: 40px;
+    padding: 8px;
+}
 
+.fa-stack:hover {
+    animation-name: pulse;
+    -webkit-animation-name: pulse;  
+    animation-duration: 1.5s;   
+    -webkit-animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+}
+
+.modal .heart-text {
+    margin-top: 0;
+    margin-bottom: 25px;
+    padding: 0;
+    font-family: var(--roboto);
+    font-weight: 700;
+    font-size: 10px !important;
+    color: var(--pampas);
+    text-align: center;
+    font-family: var(--roboto) !important;
+}
+@media (min-width: 576px) {
+    .modal span.fa-stack {
+        height: 50px;
+        width: 50px;
+    }
+    .modal .fa-heart {
+        font-size: 36px;
+    }
+    .modal .heart-text {
+        margin-bottom: 12px;
+        font-weight: 400;
+        font-size: 14px !important;
+    }
+}
+
+.social-modal {
+    position: absolute;
+    bottom: 12px;
+}
+
+.social-modal i{
+    color: var(--purple);
+}
+
+@media (min-width: 1400px) {
+    .col-xxl-5 {
+        flex: 0 0 38.6667% !important;
+        max-width: 38.6667% !important;
+    }
+    .col-xxl-10 {
+        flex: 0 0 77.3334% !important;
+        max-width: 77.3334% !important;
+    }
+}
 
 /* MODAL OBSERVATION */
 .modal {
