--- a/app/Resources/views/main/observation.html.twig
+++ b/app/Resources/views/main/observation.html.twig
@@ -96,7 +96,7 @@
                                 'label' : 'Plumage',
                                 'attr' : {
                                     'placeholder' : 'Plumage',
-                                    'class': 'form-control'
+                                    'class': 'form-control filter'
                                 }
                             }) }}
                         </div>
@@ -105,7 +105,7 @@
                                 'label' : 'Pattes',
                                 'attr' : {
                                     'placeholder' : 'Pattes',
-                                    'class': 'form-control'
+                                    'class': 'form-control filter'
                                 }
                             }) }}
                         </div>
@@ -114,7 +114,7 @@
                                 'label' : 'Couleur du bec',
                                 'attr' : {
                                     'placeholder' : 'Couleur du bec',
-                                    'class': 'form-control'
+                                    'class': 'form-control filter'
                                 }
                             }) }}
                         </div>
@@ -123,7 +123,7 @@
                                 'label' : 'Forme du bec',
                                 'attr' : {
                                     'placeholder' : 'Forme du bec',
-                                    'class': 'form-control'
+                                    'class': 'form-control filter'
                                 }
                             }) }}
                         </div>
