--- a/app/Resources/views/main/profile.html.twig
+++ b/app/Resources/views/main/profile.html.twig
@@ -477,7 +477,7 @@
 {% block javascripts %}
     {{ parent() }}
     <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRCQ8TMWxrWoGPHoZX6556wOwkB4T-6wM&callback=initMap">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDM-LWXFSraqzHfltfjrg0aIgHYdDp9EpI">
     </script>
     <script src="{{ asset('js/jquery-dateFormat.min.js') }}"></script>
     <script src="{{ asset('js/profile.js') }}"></script>
