--- a/app/Resources/views/form/commentForm.html.twig
+++ b/app/Resources/views/form/commentForm.html.twig
@@ -1,5 +1,5 @@
 <div class="form_error"></div>
-<form name="appbundle_comment" method="POST" id="commentForm" class="d-flex flex-row justify-content-between" data-url="{{ path('addComment', {'id' : actualite.id} ) }}">
+<form name="appbundle_comment" method="POST" id="commentForm" class="d-flex flex-row justify-content-between">
     <div class="mb-0 input-group align-items-center">
     	<label class="control-label" for="content">Ajouter un commentaire</label>
 	    <input type="text" id="content" name="content" required="required" placeholder="Ajouter un commentaire" class="form-control" />
