--- a/web/css/base.css
+++ b/web/css/base.css
@@ -77,7 +77,7 @@ h1 {
 }
 
 h2 {
-    font-family: Raleway-Light;
+    font-family: Raleway-light;
     font-size: 24px;
     color: var(--black);
     letter-spacing: 2px;
