--- a/web/css/base.css
+++ b/web/css/base.css
@@ -59,7 +59,6 @@
 
 
 /* TYPO */
-
 body {
     font-family: var(--roboto);
     font-size: 14px;
@@ -68,7 +67,8 @@ body {
 }
 
 h1 {
-    font-family: Raleway-Extralight;
+    font-family: var(--raleway);
+    font-weight: 200;
     font-size: 30px;
     color: var(--black);
     letter-spacing: normal;
@@ -77,7 +77,8 @@ h1 {
 }
 
 h2 {
-    font-family: Raleway-light;
+    font-family: var(--raleway);
+    font-weight: 300;
     font-size: 24px;
     color: var(--black);
     letter-spacing: 2px;
@@ -87,7 +88,8 @@ h2 {
 
 h3,
 h3>a {
-    font-family: Raleway-Regular;
+    font-family: var(--raleway);
+    font-weight: 400;
     font-size: 18px;
     letter-spacing: 3px;
     line-height: 19px;
@@ -96,7 +98,8 @@ h3>a {
 }
 
 h4 {
-    font-family: Raleway-Medium;
+    font-family: var(--raleway);
+    font-weight: 500;
     font-size: 16px;
     letter-spacing: 2.5px;
     line-height: 19px;
